--- a/FrontEnd/src/app/layout/footer/footer.component.html
+++ b/FrontEnd/src/app/layout/footer/footer.component.html
@@ -1,1 +1,2 @@
-<span>&copy; {{settings.getAppSetting('year')}} - {{ org.orgname }}</span>
+<span>&copy; {{settings.getAppSetting('year')}} - {{ org?.orgname || settings.getAppSetting('orgname') }} :
+    V{{settings.getAppSetting('version')}}</span>
