--- a/FrontEnd/src/app/routes/org/org/org.component.scss
+++ b/FrontEnd/src/app/routes/org/org/org.component.scss
@@ -1,39 +1,49 @@
 .container {
-    position: relative;
-    width: 50%;
-  }
-  
-  .image {
-    opacity: 1;
-    transition: .5s ease;
-    backface-visibility: hidden;
-  }
-  
-  .middle {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 65%;
-    // bottom: 0;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
-    z-index: 100;
-  }
-  
-  .container:hover .image {
-    opacity: 0.3;
-  }
-  
-  .container:hover .middle {
-    opacity: 0.5;
-  }
-  
-  .text {
-    background-color: #000000;
-    color: white;
-    // width:inherit;
-    font-size: 16px;
-    padding: 1px 32px;
-  }
+  position: relative;
+  width: 50%;
+}
+
+.image {
+  opacity: 1;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: 100;
+}
+
+.middleLoading {
+  transition: .5s ease;
+  position: absolute;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: 100;
+}
+
+.container:hover .image {
+  opacity: 0.3;
+}
+
+.container:hover .middle {
+  opacity: 0.5;
+}
+
+.text {
+  background-color: #000000;
+  color: white;
+  // width:inherit;
+  font-size: 16px;
+  padding: 1px 32px;
+}
