--- a/FrontEnd/src/app/routes/pages/recover/recover.component.html
+++ b/FrontEnd/src/app/routes/pages/recover/recover.component.html
@@ -4,14 +4,16 @@
         <div class="card card-flat">
             <div class="card-header text-center">
                 <a [routerLink]="'/'">
-                    <img class="block-center rounded" [src]="org?.logo || 'assets/img/looking.png'" alt="Image" width="70" title="{{org?.slogan}}"/><span style="color: #4D4D4D"> {{org?.orgname}}</span>
+                    <img class="block-center rounded" [src]="org?.logo" (error)="img.src=settings.getAppSetting('logo')" #img alt="Org Logo"
+                        width="70" title="{{org?.slogan}}" /><span style="color: #4D4D4D"> {{org?.orgname || settings.getAppSetting('orgname')}}</span>
                 </a>
             </div>
             <div class="card-body">
                 <p class="text-center py-2">DËRGO TË DHËNAT ME E-MAIL</p>
                 <form [formGroup]="recoveryForm" class="form-validate" role="form" name="recoverForm" novalidate=""
                     (submit)="submitForm($event, recoveryForm.value)">
-                    <p class="text-center">Nëse keni harruar të dhënat e hyrjes në aplikimin tonë, ju lutemi shkruani adresën e saktë të
+                    <p class="text-center">Nëse keni harruar të dhënat e hyrjes në aplikimin tonë, ju lutemi shkruani
+                        adresën e saktë të
                         e-mail-it tuaj, me të
                         cilën jeni regjistruar.</p>
                     <div class="form-group">
@@ -45,9 +47,9 @@
             <span>&copy;</span>
             <span>{{ settings.getAppSetting('year') }}</span>
             <span class="mx-2">-</span>
-            <span>{{ org?.orgname }}</span>
+            <span>{{ org?.orgname || settings.getAppSetting('orgname') }}</span>
             <br />
-            <span>{{ org?.slogan }}</span>
+            <span>{{ org?.slogan || settings.getAppSetting('slogan') }}</span>
         </div>
     </div>
 </div>
