--- a/FrontEnd/src/app/routes/personal/profile/profile.component.scss
+++ b/FrontEnd/src/app/routes/personal/profile/profile.component.scss
@@ -14,7 +14,6 @@
     opacity: 0;
     position: absolute;
     top: 65%;
-    // bottom: 0;
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
@@ -22,6 +21,17 @@
     z-index: 100;
   }
   
+  .middleLoading {
+    transition: .5s ease;
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 100;
+  }
+
   .container:hover .image {
     opacity: 0.3;
   }
