--- a/BackEnd/templates/resetpass.ejs
+++ b/BackEnd/templates/resetpass.ejs
@@ -187,7 +187,7 @@
                             <div style="line-height: 35px">
                                 <!-- <img width="100" border="0" style="display: block; width: 100px;" src="https://microservices.al/assets/img/ms-logo-vetem-blue.svg" alt="" /> -->
                                 <!-- <img src="https://microservices.al/assets/img/ms-logo.png" class="filter-green" /> -->
-                                <span style="color: #23B7E5;"><%= org.orgname %></span>
+                                <span style="color: #23B7E5;"><%= ndermarrje.emer %></span>
                             </div>
                         </td>
                     </tr>
