--- a/FrontEnd/src/app/layout/footer/footer.component.html
+++ b/FrontEnd/src/app/layout/footer/footer.component.html
@@ -1,2 +1,2 @@
-<span>&copy; {{settings.getAppSetting('year')}} - {{ org?.orgname || settings.getAppSetting('orgname') }} :
+<span>&copy; {{settings.getAppSetting('year')}} - {{ ndermarrje?.emer || settings.getAppSetting('emer') }} :
     V{{settings.getAppSetting('version')}}</span>
