--- a/FrontEnd/src/app/routes/pages/error404/error404.component.html
+++ b/FrontEnd/src/app/routes/pages/error404/error404.component.html
@@ -31,9 +31,9 @@
             <span>&copy;</span>
             <span>{{ settings.getAppSetting('year') }}</span>
             <span class="mx-2">-</span>
-            <span>{{ org?.orgname || settings.getAppSetting('orgname') }}</span>
+            <span>{{ ndermarrje?.emer || settings.getAppSetting('emer') }}</span>
             <br />
-            <span>{{ org?.slogan || settings.getAppSetting('slogan') }}</span>
+            <span>{{ ndermarrje?.slogan || settings.getAppSetting('slogan') }}</span>
         </div>
     </div>
 </div>
