--- a/BackEnd/templates/verify.ejs
+++ b/BackEnd/templates/verify.ejs
@@ -187,7 +187,7 @@
                             <div style="line-height: 35px">
                                 <!-- <img width="100" border="0" style="display: block; width: 100px;" src="https://microservices.al/assets/img/ms-logo-vetem-blue.svg" alt="" /> -->
                                 <!-- <img src="https://microservices.al/assets/img/ms-logo.png" class="filter-green" /> -->
-                                <span style="color: #23B7E5;"><%= org.orgname %></span>
+                                <span style="color: #23B7E5;"><%= nderrmarrje.emer %></span>
                             </div>
                         </td>
                     </tr>
@@ -226,7 +226,7 @@
 
                                         </p>
                                         <p style="line-height: 24px;margin-bottom:15px;">
-                                            Faleminderit që u regjistruat në <a href="<%= org.domain %>" style="color: #62639b; text-decoration: none;"><%= org.orgname %></a>
+                                            Faleminderit që u regjistruat në <a href="<%= nderrmarrje.emer %>" style="color: #62639b; text-decoration: none;"><%= nderrmarrje.emer %></a>
                                             Për të vazhduar duhet më parë të verifikoni adresën tuaj të email-it.
                                         </p>
                                         <p style="line-height: 24px; margin-bottom:20px;">
