--- a/FrontEnd/src/app/routes/home/home/home.component.html
+++ b/FrontEnd/src/app/routes/home/home/home.component.html
@@ -3,80 +3,16 @@
         <div class="row">
             <div class="col-xl-3 col-lg-4">
                 <div class="text-center">
-                    <img alt="Org Logo" class="img-fluid home-logo" [src]="org?.logo" (error)="img.src=settings.getAppSetting('logo')" #img/>
+                    <img alt="Ndermarrje Logo" class="img-fluid home-logo" [src]="ndermarrje?.logo" (error)="img.src=settings.getAppSetting('logo')" #img/>
                 </div>
             </div>
             <div class="col-xl-9 col-lg-8 home-text">
-                <h1 class="home-text-big">{{org?.orgname || settings.getAppSetting('orgname')}}</h1>
-                <p class="lead">{{org?.slogan || settings.getAppSetting('slogan')}} <strong>.</strong>
-                    <br> <small>{{org?.domain || settings.getAppSetting('domain')}}</small>
+                <h1 class="home-text-big">{{ndermarrje?.emer || settings.getAppSetting('emer')}}</h1>
+                <p class="lead">{{ndermarrje?.slogan || settings.getAppSetting('slogan')}} <strong>.</strong>
+                    <br> <small>{{ndermarrje?.domain || settings.getAppSetting('domain')}}</small>
                 </p>
                 <p><a class="btn btn-primary btn-lg" href="#">... më shumë</a></p>
             </div>
         </div>
     </div>
-    <!-- <div class="row">
-        <div class="col-lg-4">
-            <div class="card b">
-                <div class="card-header">
-                    <h3>Angular-cli</h3>
-                </div>
-                <div class="card-body">
-                    A Webpack powered command line interface with tons of utilities. Serve and build your project with a single command.
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="card b">
-                <div class="card-header">
-                    <h3>Router</h3>
-                </div>
-                <div class="card-body">
-                    Powerful and modern routes definitions. Easily declare routes and nested routes with components association.
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="card b">
-                <div class="card-header">
-                    <h3>Generators</h3>
-                </div>
-                <div class="card-body">
-                    Angular-CLI tool provides generators to create components, services, directives and pipe from the command line.
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-4">
-            <div class="card b">
-                <div class="card-header">
-                    <h3>Modularized</h3>
-                </div>
-                <div class="card-body">
-                    This project has been carefully designed to provide modules for Core, Layout, Shared and Routed components.
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="card b">
-                <div class="card-header">
-                    <h3>Environments</h3>
-                </div>
-                <div class="card-body">
-                    Ready to work with multiple environments, from first stage development through test and production.
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="card b">
-                <div class="card-header">
-                    <h3>Style Guide</h3>
-                </div>
-                <div class="card-body">
-                    Better practices for Code organization and Project structure based on the official Angular style guide.
-                </div>
-            </div>
-        </div>
-    </div> -->
 </div>
